MARWEB-602 added jdk and mavenopts to Jenkinsfile